# arduino-watchdog

./: Cargo.toml  README.md  rust-toolchain.toml  shell.nix
src/: hc_sr04.rs  main.rs
